[gd_scene load_steps=2 format=3 uid="uid://cuq4hiadaynse"]

[ext_resource type="Script" uid="uid://0kkeusds143b" path="res://scripts/scenes/RoomScene.gd" id="1_o66vl"]

[node name="RoomNode" type="Node2D"]
script = ExtResource("1_o66vl")

[node name="VisualPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 100)
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="VisualPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "name"
horizontal_alignment = 1

[node name="IDLabel" type="Label" parent="VisualPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "id"
horizontal_alignment = 1

[node name="AnchorContainer" type="Control" parent="VisualPanel"]
anchors_preset = 0
offset_right = 200.0
offset_bottom = 100.0
mouse_filter = 2

[node name="AnchorWest" type="Control" parent="VisualPanel/AnchorContainer"]
anchors_preset = 0
offset_left = -10.0
offset_top = 25.0
offset_right = 10.0
offset_bottom = 75.0

[node name="AnchorSouth" type="Control" parent="VisualPanel/AnchorContainer"]
anchors_preset = 0
offset_left = 75.0
offset_top = 90.0
offset_right = 125.0
offset_bottom = 110.0

[node name="AnchorEast" type="Control" parent="VisualPanel/AnchorContainer"]
anchors_preset = 0
offset_left = 190.0
offset_top = 25.0
offset_right = 210.0
offset_bottom = 75.0

[node name="AnchorNorth" type="Control" parent="VisualPanel/AnchorContainer"]
anchors_preset = 0
offset_left = 75.0
offset_top = -10.0
offset_right = 125.0
offset_bottom = 10.0
